# tagFormatter

./: .gitignore  README.md  pyproject.toml
examples/: tags_template.csv
src/tagformatter/: __init__.py  cli.py  csv_loader.py  flac_writer.py  models.py  tag_mapping.py
tests/: test_cli.py  test_csv_loader.py  test_flac_writer.py
