[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tagformatter"
version = "0.1.0"
description = "Apply FLAC tags from CSV files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mutagen>=1.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
tagformatter = "tagformatter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
